NEWS                                                            -*- outline -*-
----

Welcome to schroot 1.1.5.  Please read these release notes carefully.

Full installation instructions are provided in the INSTALL file.  The
README file also contains more specific notes regarding building and
configuration.

* Major changes in 1.1.5:

  Bugfixes and translation updates only.

* Major changes in 1.1.4:

  1) When ending a session, processes still running in the chroot are
     terminated.

* Major changes in 1.1.3:

  Bugfixes and translation updates only.

* Major changes in 1.1.2:

  Bugfixes and translation updates only.

* Major changes in 1.1.1:

  1) For dchroot and dchroot-dsa, the syslog logging of the command or
     shell being run in the chroot now only occurs when running as
     root or switching to another user.  If the user is the same
     inside and outside the chroot, and not root, the command or shell
     being run will not be logged.

  2) Using symbolic links in the mount path (SCHROOT_MOUNT_DIR) will
     no longer result in severe dataloss.

  3) User-defined filtering of the chroot environment is now permitted
     using the environment-filter key in the configuration file, which
     uses a regular expression to identify environment variables for
     removal.

  4) The environment variables SCHROOT_COMMAND, SCHROOT_USER,
     SCHROOT_GROUP, SCHROOT_UID and SCHROOT_GID are set inside the
     chroot specifying the command being run, the user name, group
     name, user ID and group ID, respectively.

* Major changes in 1.1.0:

  1) Authentication now uses the Controlling TTY (/dev/tty) for
     communication with the user.  This means PAM interaction with the
     user will work even if stdin, stdout and stderr are all
     redirected.  If authentication is required and no CTTY is
     available, it will fail (due to authentication being an
     interactive process).

  2) The syslog logging of the command or shell being run in the