@@ -51,7 +51,7 @@ schroot_LDADD = libschroot.la
 
 
 pkgsysconfdir = $(PACKAGE_SYSCONF_DIR)
-pkgsysconf_DATA = schroot.conf
+pkgsysconf_DATA = schroot.conf script-defaults
 
 man_MANS = schroot.1 schroot-setup.5 schroot.conf.5
 
