@@ -1,5 +1,9 @@
 #!/bin/sh
 
+if [ -f "$CHROOT_SCRIPT_CONFIG" ]; then
+  . "$CHROOT_SCRIPT_CONFIG"
+fi
+
 if [ $1 = "exec-start" ]; then
 
     if [ "$AUTH_VERBOSITY" = "verbose" ]; then
@@ -12,6 +16,7 @@ if [ $1 = "exec-start" ]; then
 	echo "CHROOT_TYPE=$CHROOT_TYPE"
 	echo "CHROOT_NAME=$CHROOT_NAME"
 	echo "CHROOT_DESCRIPTION=$CHROOT_DESCRIPTION"
+	echo "CHROOT_SCRIPT_CONFIG=$CHROOT_SCRIPT_CONFIG"
 	echo "CHROOT_MOUNT_LOCATION=$CHROOT_MOUNT_LOCATION"
 	echo "CHROOT_LOCATION=$CHROOT_LOCATION"
 	echo "CHROOT_PATH=$CHROOT_PATH"
@@ -30,6 +35,7 @@ if [ $1 = "exec-start" ]; then
 		echo "CHROOT_LVM_SNAPSHOT_OPTIONS=$CHROOT_LVM_SNAPSHOT_OPTIONS"
 	    fi
 	fi
+        echo "SBUILD=$SBUILD"
     fi
 
 fi
