@@ -1,0 +1,7 @@
+# Default settings for chroot setup and exec scripts
+
+if [ -x /usr/bin/sbuild ]; then
+  SBUILD="true"
+else
+  SBUILD="false"
+fi
