@@ -18,6 +18,10 @@
 
 set -e
 
+if [ -f "$CHROOT_SCRIPT_CONFIG" ]; then
+  . "$CHROOT_SCRIPT_CONFIG"
+fi
+
 if [ "$AUTH_VERBOSITY" = "verbose" ]; then
   VERBOSE="-v"
 fi
