@@ -18,6 +18,10 @@
 
 set -e
 
+if [ -f "$CHROOT_SCRIPT_CONFIG" ]; then
+  . "$CHROOT_SCRIPT_CONFIG"
+fi
+
 # Mount a filesystem
 # $1: mount options
 # $2: mount device
